[workspace]
members = [
    "compiler/ast",
    "compiler/codegen",
    "compiler/format-tool"
]

[package]
name = "x-lang"
version = "0.0.1"
authors = ["peakchen90 <1558267774@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x-lang-ast = { path = "./compiler/ast" }
x-lang-codegen = { path = "./compiler/codegen" }
x-lang-format-tool = { path = "./compiler/format-tool" }
serde_json = "1"
tiny-json = "^0.0.1"