[workspace]
members = [
    "compiler/ast",
    "compiler/codegen",
    "compiler/format-tool",
    "node-binding"
]

[package]
name = "x-lang"
version = "0.0.1"
authors = ["peakchen90 <1558267774@qq.com>"]
edition = "2018"
publish = false

[profile.release]
panic = 'abort'

[dependencies]
x-lang-ast = { path = "./compiler/ast" }
x-lang-codegen = { path = "./compiler/codegen" }
x-lang-format-tool = { path = "./compiler/format-tool" }
serde_json = "1"
tiny-json = "^0.0.1"