[workspace]
members = [
    "compiler/ast",
    "compiler/codegen",
    "compiler/format-tool",
    "node-binding",
    # "wasm/compiler",
    "wasm/tools"
]

[package]
name = "x-lang"
version = "0.0.1"
authors = ["peakchen90 <1558267774@qq.com>"]
edition = "2018"
publish = false

# [lib]
# name = "xlang"
# crate-type = ["cdylib", "staticlib"]

[profile.release]
panic = 'abort'

[dependencies]
x-lang-ast = { path = "./compiler/ast" }
x-lang-codegen = { path = "./compiler/codegen" }
x-lang-format-tool = { path = "./compiler/format-tool" }
serde_json = "1"
tiny-json = "^0.0.1"
libc = "0.2"