[package]
name = "node-binding"
version = "0.0.1"
authors = ["peakchen90 <1558267774@qq.com>"]
edition = "2018"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
x-lang-ast = { path = "../compiler/ast" }
napi = {version = "1", features = ["serde-json"]}
napi-derive = {version = "1"}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = ["unbounded_depth"]}

[build-dependencies]
napi-build = {version = "1"}
