[package]
name = "x-lang-ast"
version = "0.0.1"
authors = ["peakchen90 <1558267774@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
ansi_term = "^0.12.1"
wasm-bindgen = "0.2"

[features]
wasm = []