[package]
name = "x-lang-codegen"
version = "0.0.1"
authors = ["peakchen90 <1558267774@qq.com>"]
edition = "2018"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x-lang-ast = { path = "../ast" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }